--- a/TestOpenCL5.vcxproj
+++ b/TestOpenCL5.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{13814587-13b6-47f9-b209-6b1d6056830f}</ProjectGuid>
     <RootNamespace>TestOpenCL5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenCLWrapperByPunal</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
