V37 Only One Work Pending

--- a/TestOpenCL5.vcxproj
+++ b/TestOpenCL5.vcxproj
@@ -152,7 +152,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TestOpenCL5.cpp" />
+    <ClCompile Include="Example1.cpp" />
+    <ClCompile Include="Example2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PunalOpenclFunctionsProgram.cl" />
